<resources>
    <string name="app_name">ForeignFriend</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">1816308978618100</string>

<<<<<<< HEAD
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>
    <string name="pref_header_help">About &amp; Help</string>
    <string-array name="pref_language_titles">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Swedish</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>en</item>
        <item>fr</item>
        <item>sp</item>
        <item>sw</item>
    </string-array>
    <string-array name="pref_themes_titles">
        <item>Default</item>
    </string-array>
    <string-array name="pref_themes_values">
        <item>df</item>
    </string-array>

    <string name="pref_title_display_name">Display Name</string>
    <string name="pref_header_about_help">About &amp; Help</string>
    <string name="pref_header_themes">Themes</string>
    <string name="pref_header_language">Language</string>


    <string name="pref_title_vibrate">Vibrate</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_ok">Yes</string>
    <string name="delete_account_no">No</string>
    <string name="delete_account_message">Delete the account</string>

    <!-- strings related to the student online profile -->
    <string name="student_online_name">Juan Louis</string>
    <string name="email_subject">Mail from ForeignFriend</string>

=======
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_filter">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_maps">Map</string>

    <!-- Strings for the filterActivity-->

    <string-array name ="courses">
        <item>ID2216</item>
        <item>IS1200</item>
        <item>HE1208</item>
        <item>SK1101</item>
        <item>AD001</item>
        <item>AC0002</item>
    </string-array>

    <string-array name="fields">
        <item>Math</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Business</item>
        <item>IT</item>
        <item>Filed a</item>
        <item>Field b</item>
        <item>Field c</item>
        <item>Field d</item>
        <item>Field e</item>
        <item>FIELD F</item>
        <item>FIELD G</item>
    </string-array>
>>>>>>> origin/master
</resources>
